some fixes with Controllers
